--- a/SMS/templates/generate_report.html
+++ b/SMS/templates/generate_report.html
@@ -65,15 +65,15 @@
             <form method="POST">
                 {% csrf_token %}
                 <div class="form-group">
-                    <label for="curso_virtual">Asistencia</label>
-                    <select id="curso_virtual" name="curso_virtual" class="form-control" required>
-                        <option value="si">Asiste</option>
-                        <option value="no">No asiste</option>
+                    <label for="attended">Asistencia</label>
+                    <select id="attended" name="attended" class="form-control" required>
+                        <option value="Yes">Asiste</option>
+                        <option value="No">No asiste</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="observaciones">Observaciones:</label>
-                    <textarea id="observaciones" name="observaciones" class="form-control" rows="5" required></textarea>
+                    <label for="observations">Observaciones:</label>
+                    <textarea id="observations" name="observations" class="form-control" rows="5" required></textarea>
                 </div>
                 <div class="text-center"> <!-- Añadida clase text-center -->
                     <button type="submit" class="btn btn-enviar-reporte">Enviar Reporte</button>
