--- a/SMS/templates/generate_report.html
+++ b/SMS/templates/generate_report.html
@@ -67,8 +67,8 @@
                 <div class="form-group">
                     <label for="attended">Asistencia</label>
                     <select id="attended" name="attended" class="form-control" required>
-                        <option value="Yes">Asiste</option>
-                        <option value="No">No asiste</option>
+                        <option value="Yes">Sí</option>
+                        <option value="No">No</option>
                     </select>
                 </div>
                 <div class="form-group">
