--- a/SMS/templates/create_course.html
+++ b/SMS/templates/create_course.html
@@ -75,8 +75,10 @@
                 <div class="form-group">
                     <label for="students">Estudiantes:</label>
                     {% for student in students %}
+                    <div style="border: 1px solid black; margin-bottom: 5px;">
                         <input type="checkbox" name="students" value="{{ student.id }}">
                         <label for="{{ student.id }}">{{ student.name }}</label>
+                    </div>
                     {% endfor %}
                 </div>
                 <div class="form-group">
