--- a/SMS/templates/user_home.html
+++ b/SMS/templates/user_home.html
@@ -88,9 +88,8 @@
 
     <!-- Botones -->
     <div class="boton">
-      <a href="{% url 'create_course' %}" class="btn btn-crear-curso">Crear Curso</a>
-      <a href="{% url 'create_student' %}" class="btn btn-crear-estudiante">Crear Estudiante</a>
-      <a href="{% url 'show_course' %}" class="btn btn-ver-cursos">Ver Mis Cursos</a>
+      <a href="#" class="btn btn-crear-estudiante">Crear Sesión</a>
+      <a href="{% url 'show_my_courses' %}" class="btn btn-ver-cursos">Ver Mis Cursos</a>
     </div>
   </div>
 
