--- a/SMS/templates/login.html
+++ b/SMS/templates/login.html
@@ -1,10 +1,10 @@
+<!-- SMS/templates/SMS/login.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>Lista de Cursos</title>
+    <title>Iniciar Sesión</title>
     <!-- Estilos de Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Estilos personalizados -->
@@ -16,35 +16,36 @@
         }
         .container {
             margin-top: 50px;
-            text-align: center; /* Centrar contenido */
+            text-align: center;
         }
         .logo {
             width: 200px;
             margin-bottom: 20px;
-            display: block; /* Convertir en bloque para alinear horizontalmente */
-            margin-left: auto; /* Centrar horizontalmente */
-            margin-right: auto; /* Centrar horizontalmente */
         }
-        .curso {
+        .formulario {
             background-color: #fff;
             border: 1px solid #ccc;
             border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
             padding: 20px;
+        }
+        .form-group {
             margin-bottom: 20px;
         }
-        .curso h2 {
-            margin-top: 0;
+        .form-group label {
+            font-weight: bold;
         }
-        .btn-enviar-reporte {
-            background-color: #e74c3c;
+        .btn-guardar {
+            background-color: #e74c3c; /* Rojo */
             color: #fff;
             border: none;
             border-radius: 5px;
             padding: 10px 20px;
-            font-size: 16px;
+            font-size: 18px;
             cursor: pointer;
         }
-        .btn-enviar-reporte:hover {
+        .btn-guardar:hover {
+            background-color: #f39c12; /* Amarillo */
             opacity: 0.8;
         }
     </style>
@@ -54,20 +55,16 @@
         <!-- Logo -->
         <img src="https://www.juanmariacespedes.edu.co/images/logofull-2.png" alt="Logo de la empresa" class="logo">
 
-        <h1>Lista de Cursos</h1>
-        {% if courses %}
-            {% for course in courses %}
-                <div class="curso">
-                    <h2>{{ course.subject }}</h2>
-                    <p>Competencias: {{ course.competencies }}</p>
-                    <p>Fecha inicial: {{ course.initial_date }}</p>
-                    <p>Fecha final: {{ course.final_date }}</p>
-                    <a href="{% url 'show_students' course_id=course.id %}" class="btn btn-enviar-reporte">Mostrar estudiantes</a>
-                </div>
-            {% endfor %}
-        {% else %}
-            <p>No hay cursos disponibles.</p>
-        {% endif %}
+        <!-- Formulario de Iniciar Sesión -->
+        <div class="formulario">
+            <h2>Iniciar Sesión</h2>
+            <form method="POST" action="{% url 'login' %}">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="btn btn-guardar">Iniciar Sesión</button>
+            </form>
+            <a href="{% url 'home' %}">Volver al Inicio</a>
+        </div>
     </div>
 
     <!-- Scripts de Bootstrap -->
