--- a/SMS/templates/admin_home.html
+++ b/SMS/templates/admin_home.html
@@ -1,5 +1,12 @@
-<!DOCTYPE html>
-<html lang="es">
+{% extends 'base_admin.html' %}
+
+{% block title %}
+    Home
+{% endblock %}
+
+
+
+{% block content %}
 
 <head>
   <meta charset="UTF-8">
@@ -112,5 +119,4 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
-
-</html>
+{% endblock content %}
