--- a/SMS/templates/create_course.html
+++ b/SMS/templates/create_course.html
@@ -1,5 +1,13 @@
-<!DOCTYPE html>
-<html lang="es">
+{% extends 'base_admin.html' %}
+
+{% block title %}
+    Crear Curso
+{% endblock %}
+
+
+
+{% block content %}
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -116,4 +124,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
-</html>
+{% endblock content %}
