--- a/SMS/templates/create_session.html
+++ b/SMS/templates/create_session.html
@@ -1,17 +1,16 @@
-{% extends 'base_admin.html' %}
+{% extends 'base_user.html' %}
 
 {% block title %}
-    Crear Profesor
+    Crear Sesión
 {% endblock %}
 
 
 
 {% block content %}
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crear Profesor</title>
+    <title>Crear Sesión</title>
     <!-- Estilos de Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Estilos personalizados -->
@@ -64,38 +63,24 @@
 
         <!-- Formulario de Crear Profesor -->
         <div class="formulario">
-            <h2>Crear Profesor</h2>
+            <h2>¿Qué curso veremos hoy?</h2>
             {% if messages %}
                 {% for message in messages %}
                     <div class="alert alert-{{ message.tags }}">{{ message }}</div>
                 {% endfor %}
             {% endif %}
-            <form method="POST" action="{% url 'create_teacher' %}">
+            <form method="POST" action="{% url 'create_session' %}">
                 {% csrf_token %}
                 <div class="form-group">
-                    <label for="email">Correo Electrónico:</label>
-                    <input type="email" id="email" name="email" class="form-control" required>
-                </div>
-                <div class="form-group">
-                    <label for="name">Nombre:</label>
-                    <input type="text" id="name" name="name" class="form-control" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Contraseña:</label>
-                    <input type="password" id="password" name="password" class="form-control" required>
-                </div>
-                <div class="form-group">
-                    <label for="password_confirm">Confirmar Contraseña:</label>
-                    <input type="password" id="password_confirm" name="password_confirm" class="form-control" required>
-                </div>
-                <div class="form-group">
-                    <label for="admin">¿Es administrador?</label>
-                    <select id="admin" name="admin" class="form-control">
-                        <option value="false">No</option>
-                        <option value="true">Sí</option>
+                    <label for="course">Curso:</label>
+                    <select id="course" name="course" class="form-control" required>
+                        <option value="">Selecciona un curso</option>
+                        {% for course in courses %}
+                            <option value="{{ course.id }}">{{ course.subject }}</option>
+                        {% endfor %}
                     </select>
                 </div>
-                <button type="submit" class="btn btn-guardar">Crear Profesor</button>
+                <button type="submit" class="btn btn-guardar">Crear Sesión</button>
             </form>
         </div>
     </div>
@@ -105,5 +90,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
-
 {% endblock content %}
