--- a/SMS/templates/generate_report.html
+++ b/SMS/templates/generate_report.html
@@ -1,5 +1,12 @@
-<!DOCTYPE html>
-<html lang="es">
+{% extends 'base_user.html' %}
+
+{% block title %}
+    Enviar Reporte
+{% endblock %}
+
+
+
+{% block content %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -56,7 +63,7 @@
 
         <h1 class="text-center">Enviar Reporte</h1>
         <div class="formulario">
-            <h2>Reporte de {{student.nombre}}</h2>
+            <h2>Reporte de {{student.name}}</h2>
             {% if messages %}
             {% for message in messages %}
                 <div class="alert alert-{{ message.tags }}">{{ message }}</div>
@@ -87,4 +94,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
-</html>
+
+{% endblock content %}
