--- a/SMS/templates/create_session.html
+++ b/SMS/templates/create_session.html
@@ -4,64 +4,12 @@
     Crear Sesión
 {% endblock %}
 
-
-
 {% block content %}
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crear Sesión</title>
-    <!-- Estilos de Bootstrap -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Estilos personalizados -->
-    <style>
-        body {
-            background-color: #f8f9fa;
-            color: #333;
-            font-family: Arial, sans-serif;
-        }
-        .container {
-            margin-top: 50px;
-            text-align: center;
-        }
-        .logo {
-            width: 200px;
-            margin-bottom: 20px;
-        }
-        .formulario {
-            background-color: #fff;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            padding: 20px;
-        }
-        .form-group {
-            margin-bottom: 20px;
-        }
-        .form-group label {
-            font-weight: bold;
-        }
-        .btn-guardar {
-            background-color: #e74c3c; /* Rojo */
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            padding: 10px 20px;
-            font-size: 18px;
-            cursor: pointer;
-        }
-        .btn-guardar:hover {
-            background-color: #f39c12; /* Amarillo */
-            opacity: 0.8;
-        }
-    </style>
-</head>
-<body>
     <div class="container">
         <!-- Logo -->
         <img src="https://www.juanmariacespedes.edu.co/images/logofull-2.png" alt="Logo de la empresa" class="logo">
 
-        <!-- Formulario de Crear Profesor -->
+        <!-- Formulario de Crear Sesión -->
         <div class="formulario">
             <h2>¿Qué curso veremos hoy?</h2>
             {% if messages %}
@@ -84,10 +32,4 @@
             </form>
         </div>
     </div>
-
-    <!-- Scripts de Bootstrap -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
 {% endblock content %}
