--- a/SMS/templates/user_home.html
+++ b/SMS/templates/user_home.html
@@ -4,92 +4,7 @@
     Home
 {% endblock %}
 
-
-
 {% block content %}
-
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página de Inicio</title>
-  <!-- Estilos de Bootstrap -->
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Estilos personalizados -->
-  <style>
-    body {
-      background-color: #f8f9fa;
-      color: #333;
-      font-family: Arial, sans-serif;
-    }
-
-    .container {
-      margin-top: 50px;
-      text-align: center;
-    }
-
-    .logo {
-      width: 200px;
-      margin-bottom: 20px;
-    }
-
-    .boton {
-      margin-top: 20px;
-    }
-
-    .boton a {
-      display: block;
-      margin-bottom: 10px;
-      padding: 15px 20px;
-      border-radius: 5px;
-      font-size: 18px;
-      font-weight: bold;
-      text-decoration: none;
-    }
-
-    .boton .btn-crear-curso {
-      background-color: #f39c12;
-      color: #fff;
-    }
-
-    .boton .btn-crear-estudiante {
-      background-color: #e74c3c;
-      color: #fff;
-    }
-
-    .boton .btn-ver-cursos {
-      background-color: #f39c12;
-      color: #fff;
-    }
-
-    .boton .btn-ver-estudiantes {
-      background-color: #e74c3c;
-      color: #fff;
-    }
-
-    .boton a:hover {
-      opacity: 0.8;
-    }
-
-    .estructura {
-      margin-top: 50px;
-    }
-
-    .estructura .columna {
-      padding: 20px;
-      background-color: #fff;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-
-    .estructura .columna h2 {
-      margin-bottom: 20px;
-    }
-  </style>
-</head>
-
-<body>
   <div class="container">
     <!-- Logo -->
     <img src="https://www.juanmariacespedes.edu.co/images/logofull-2.png" alt="Logo de la empresa" class="logo">
@@ -112,10 +27,4 @@
       </div>
     </div>
   </div>
-
-  <!-- Scripts de Bootstrap -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-{% endblock %}
+{% endblock content %}
